# Diffraction-lv

./: .gitignore  PROJECT_NAVIGATION.md  diff-cuda-c++.ipynb  document.tex  fix_nb_v2.py  local_benchmark.ipynb  run_benchmark_colab.sh  update_nb.py
Diffraction-main/: Diffraction.csproj  Form1.Designer.cs  Form1.cs  Program.cs  ЗАПУСТИТЬ.bat  ОЧИСТИТЬ_И_СОБРАТЬ.bat
cpp_version/: CMakeLists.txt  README.txt  START_HERE.bat  build.bat  compile_and_run.bat  plot_timing.py  run.bat  run_and_plot.bat  timing_data.csv
cpp_version/include/: Bessel.h  Chebyshev.h  DifrOnLenta.h  Gauss.h  Matrix.h
cpp_version/src/: Bessel.cpp  Chebyshev.cpp  DifrOnLenta.cpp  Gauss.cpp  Matrix.cpp  cpu_benchmark_n.cpp  main.cpp
cuda_version/: CMakeLists.txt  README.md
cuda_version/colab/: build_cuda.sh  run_benchmark.py
cuda_version/include/: Bessel.h  Chebyshev.h  CudaCommon.h  DifrOnLentaCuda.h  Gauss.h  Matrix.h
cuda_version/src/: Bessel.cu  Chebyshev.cu  DifrOnLentaCuda.cu  Gauss.cpp  Matrix.cpp  gpu_benchmark_n.cu  main.cu
temp/: gpu_performance_data.csv  plot_gpu_n_500.py
